# energy-mix

./: .gitignore  LICENSE  README.md  env.sample  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: energy-mix.yml
bot/: emojis.py  entsoe.py  main.py  tweet.py
samples/: Actual Generation per Production Type_202101010000-202201010000.csv  entsoe-cz-2021.csv  entsoe.ipynb  one-april-day-pct.csv  one-april-day.csv
src/energy_mix/: __main__.py  emojis.py  entsoe.py
tests/: test_emojis.py  test_entsoe.py  test_tweet.py
